more commands of option test added

--- a/perceptron/makefile
+++ b/perceptron/makefile
@@ -43,5 +43,8 @@ test_options:
 	${PYTHON} ${PYTHON_PROG} -u 200 ${TRAIN_FILE} ${TEST_FILE} 
 	${PYTHON} ${PYTHON_PROG} -u 500 ${TRAIN_FILE} ${TEST_FILE} 
 	${PYTHON} ${PYTHON_PROG} -u 1000 ${TRAIN_FILE} ${TEST_FILE} 
+	${PYTHON} ${PYTHON_PROG} -u 1400 ${TRAIN_FILE} ${TEST_FILE} 
+	${PYTHON} ${PYTHON_PROG} -u 1800 ${TRAIN_FILE} ${TEST_FILE} 
+	${PYTHON} ${PYTHON_PROG} -u 2000 ${TRAIN_FILE} ${TEST_FILE} 
 
 .PHONY: test
