new tests added for over iterations

--- a/perceptron/makefile
+++ b/perceptron/makefile
@@ -46,5 +46,10 @@ test_options:
 	${PYTHON} ${PYTHON_PROG} -u 1400 ${TRAIN_FILE} ${TEST_FILE} 
 	${PYTHON} ${PYTHON_PROG} -u 1800 ${TRAIN_FILE} ${TEST_FILE} 
 	${PYTHON} ${PYTHON_PROG} -u 2000 ${TRAIN_FILE} ${TEST_FILE} 
+	${PYTHON} ${PYTHON_PROG} -u 3000 ${TRAIN_FILE} ${TEST_FILE} 
+	${PYTHON} ${PYTHON_PROG} -u 5000 ${TRAIN_FILE} ${TEST_FILE} 
+	${PYTHON} ${PYTHON_PROG} -u 7500 ${TRAIN_FILE} ${TEST_FILE} 
+	${PYTHON} ${PYTHON_PROG} -u 10000 ${TRAIN_FILE} ${TEST_FILE} 
+	${PYTHON} ${PYTHON_PROG} -u 15000 ${TRAIN_FILE} ${TEST_FILE} 
 
 .PHONY: test
