makefile fixed to binarize label data

--- a/rakuten/makefile
+++ b/rakuten/makefile
@@ -11,6 +11,7 @@ all_data: ${ALL_DATA_FILES}
 
 ${LABEL_FILE}: ${SOURCE_DATA_FILE}
 	zcat ${.ALLSRC} | head -n 2000 | cut -f 8 > ${LABEL_FILE}
+	python3 binarize.py ${LABEL_FILE}
 
 ${JP_TEXT_FILE}: ${SOURCE_DATA_FILE}
 	zcat ${.ALLSRC} | head -n 2000 | cut -f 9 | gzip > ${JP_TEXT_FILE}
