--- a/rakuten/makefile
+++ b/rakuten/makefile
@@ -2,7 +2,8 @@ RM = rm -rf
 SOURCE_DATA_FILE = rakuten_reviews.txt.gz
 LABEL_FILE = labels.txt
 JP_TEXT_FILE = texts.txt.gz
-ALL_DATA_FILES = ${LABEL_FILE} ${JP_TEXT_FILE}
+NORM_JP_TEXT_FILE = texts_norm.txt.gz
+ALL_DATA_FILES = ${LABEL_FILE} ${JP_TEXT_FILE} ${NORM_JP_TEXT_FILE}
 
 all:
 	@echo nothing to do
@@ -15,6 +16,9 @@ ${LABEL_FILE}: ${SOURCE_DATA_FILE}
 
 ${JP_TEXT_FILE}: ${SOURCE_DATA_FILE}
 	zcat ${.ALLSRC} | head -n 2000 | cut -f 9 | gzip > ${JP_TEXT_FILE}
+
+${NORM_JP_TEXT_FILE}: ${JP_TEXT_FILE}
+	python2 normalize.py ${JP_TEXT_FILE} ${NORM_JP_TEXT_FILE}
 
 clean:
 	${RM} ${ALL_DATA_FILES}
