makefile's all target is changed to generate old all_data target's files

--- a/rakuten/makefile
+++ b/rakuten/makefile
@@ -5,10 +5,8 @@ JP_TEXT_FILE = texts.txt.gz
 NORM_JP_TEXT_FILE = texts_norm.txt.gz
 ALL_DATA_FILES = ${LABEL_FILE} ${JP_TEXT_FILE} ${NORM_JP_TEXT_FILE}
 
-all:
-	@echo nothing to do
 
-all_data: ${ALL_DATA_FILES}
+all: ${ALL_DATA_FILES}
 
 ${LABEL_FILE}: ${SOURCE_DATA_FILE}
 	zcat ${.ALLSRC} | head -n 2000 | cut -f 8 > ${LABEL_FILE}
@@ -24,4 +22,4 @@ clean:
 	${RM} ${ALL_DATA_FILES}
 
 
-.PHONY: clean all all_data
+.PHONY: clean all
