configuration of number of iteration times is moved from makefile to cofig.sh

--- a/perceptron/makefile
+++ b/perceptron/makefile
@@ -12,7 +12,6 @@ TEST_FILE = test_cv0.txt
 .endif
 
 CSV_DIR = csv
-N_ITER = 8
 
 
 
@@ -21,7 +20,7 @@ all: csv csv/img
 # touch data files when reproduce csv dir cause it's a dir
 csv: ${TRAIN_FILE} ${TEST_FILE}
 	@echo "# generating csv data"
-	sh csv.sh ${N_ITER} ${TRAIN_FILE} ${TEST_FILE}
+	sh csv.sh ${TRAIN_FILE} ${TEST_FILE}
 
 csv/img: csv
 	make -C ${CSV_DIR}
